handle converter exception